force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/Daily_Call_Report__c.object-meta.xml
<CustomObject>
    <label>Daily Call Report</label>
    <nameField>
        <displayFormat>DCR-{0000}</displayFormat>
        <label>Executive Call Report Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Call Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>