force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/CDB_For_The_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>CDB_For_The_Date_Updated__c</fullName>
    <label>CDB For The Date Updated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>