force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Contact_Mode__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mode__c</fullName>
    <label>Contact Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice call</fullName>
            </value>
            <value>
                <fullName>Video call</fullName>
            </value>
            <value>
                <fullName>In person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>