force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <formula>TEXT(Customer_Name__r.Continent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continent</label>
    <type>Text</type>
</CustomField>