force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Created_Month_in_number__c.field-meta.xml
<CustomField>
    <fullName>Created_Month_in_number__c</fullName>
    <formula>MONTH( Date_Of_Customer_Visit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month(In number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>