force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Created_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Year__c</fullName>
    <formula>YEAR( Date_Of_Customer_Visit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>