force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <formula>TEXT( Customer_Name__r.Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Category</label>
    <type>Text</type>
</CustomField>