force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <formula>Customer_Name__r.Customer_Number__c</formula>
    <label>Customer Code</label>
    <type>Text</type>
</CustomField>