force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Customer_Feedback_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_If_Any__c</fullName>
    <label>Customer Feedback If Any</label>
    <type>TextArea</type>
</CustomField>