force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Executive_Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>