force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Date_Of_Customer_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Customer_Visit__c</fullName>
    <inlineHelpText>Kindly enter previous day&apos;s date</inlineHelpText>
    <label>Date Of Customer Visit</label>
    <required>true</required>
    <type>Date</type>
</CustomField>