force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Highlights_Of_The_Day__c.field-meta.xml
<CustomField>
    <fullName>Highlights_Of_The_Day__c</fullName>
    <label>Highlights Of The Day</label>
    <type>TextArea</type>
</CustomField>