force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Next_Day_Visit_Plan_Place_District_State__c.field-meta.xml
<CustomField>
    <fullName>Next_Day_Visit_Plan_Place_District_State__c</fullName>
    <description>This field is to enter the plan for the next day along with place,district &amp; state</description>
    <label>Next Day Visit Plan:Place-District-State</label>
    <type>TextArea</type>
</CustomField>