force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Next_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Date__c</fullName>
    <label>Next Follow Up Date</label>
    <type>Date</type>
</CustomField>