force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <formula>Customer_Name__r.Billing_Place__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place</label>
    <type>Text</type>
</CustomField>