force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Report_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Entry_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Report Entry Date</label>
    <type>Date</type>
</CustomField>