force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Visit_Report_In_Brief__c.field-meta.xml
<CustomField>
    <fullName>Visit_Report_In_Brief__c</fullName>
    <label>Visit Report In Brief</label>
    <type>TextArea</type>
</CustomField>