force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>Work_Mode__c</fullName>
    <label>Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Customer Visit</fullName>
            </value>
            <value>
                <fullName>Work from Home</fullName>
            </value>
            <value>
                <fullName>Work from Office</fullName>
            </value>
            <value>
                <fullName>Applied Leave</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>