force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/fields/Worked_With__c.field-meta.xml
<CustomField>
    <fullName>Worked_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worked With</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Executive_Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>