force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Date_Of_Customer_Visit__c</columns>
    <columns>Contact_Mode__c</columns>
    <columns>Work_Mode__c</columns>
    <columns>Worked_With__c</columns>
    <columns>Collections__c</columns>
    <columns>Place__c</columns>
    <columns>Highlights_Of_The_Day__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>