force-app/force-app/force-app/main/default/objects/Daily_Call_Report__c/listViews/My_Daily_Call_Report.listView-meta.xml
<ListView>
    <fullName>My_Daily_Call_Report</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Next_Follow_Up_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Daily Call Report</label>
</ListView>